fix msg page tips and footer overlap

--- a/src/app.less
+++ b/src/app.less
@@ -40,9 +40,6 @@ image {
         opacity: 0;
     }
 }
-.weui-msg__extra-area {
-    position: static;
-}
 .page__hd {
     padding: 40px;
 }
