--- a/src/style/widget/weui-page/weui-msg.less
+++ b/src/style/widget/weui-page/weui-msg.less
@@ -90,6 +90,7 @@
     color: @weuiTextColorDesc;
 }
 .weui-msg__extra-area {
+    position: static;
     margin-bottom: 24px;
     font-size: 12px;
     color: @weuiTextColorDesc;
